# bl602_dma_lvgl

./: CMakeLists.txt  Makefile  genromap  main.c  proj.conf
include/: lv_conf.h  spi_disp.h  ui_disp.h
src/: spi_disp.c  uart_recv.c  ui_disp.c
